--- a/.github/workflows/snyk-scan.yml
+++ b/.github/workflows/snyk-scan.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main  # Adjust branch name as needed
-  pull_request:
+  pull_request:{}
     branches:
       - main  # Adjust branch name as needed
 
@@ -20,7 +20,7 @@ jobs:
     - name: Install Node.js and npm
       uses: actions/setup-node@v2
       with:
-        node-version: '14'
+        node-version: '20.14.0'
         
     - name: Install dependencies
       run: npm install
