--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,8 +2,11 @@ name: "CodeQL Scan"
 
 on:
   push:
-  pull_request:
-
+    branches:
+      - main  # Adjust branch name as needed
+  pull_request:{}
+  schedule:
+    - cron: '00 * * 0'
 jobs:
   analyze:
     name: Analyze
