--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -14,8 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac
       
     - name: Install Semgrep
       run: |
